crates/biome_cli/tests/snapshots/main_commands_lint/should_not_error_for_no_changed_files_with_no_errors_on_unmatched.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --changed --since=main --no-errors-on-unmatched file.js file2.js
```

## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
