crates/biome_cli/tests/snapshots/main_commands_lint/should_not_process_ignored_file_even_if_its_changed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --changed --since=main file.js file2.js
```

## `biome.json`

```json
{
  "files": { "includes": ["**", "!file.js"] },
  "vcs": { "defaultBranch": "main" }
}
```

## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.js
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
