crates/biome_cli/tests/snapshots/main_commands_lint/should_skip_nonexistent_changed_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --changed --since=main
```

## `exists.js`

```js
console.log('exists');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
